# gemma-zds-client

./: .bumpversion.cfg  .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.rst  MANIFEST.in  README.rst  config.yml  package.json  setup.cfg  tox.ini
.github/workflows/: ci.yml  code_quality.yml
docs/: conf.py  getting_started.rst  index.rst  nlx.rst  reference.rst
tests/: config.yaml  test_client.py  test_client_auth.py  test_client_create.py  test_client_delete.py  test_client_list.py  test_client_retrieve.py  test_client_update.py  test_hooks.py  test_requests_hook.py  test_static_client_config.py
zds_client/: __init__.py  auth.py  client.py  config.py  generate_jwt.py  log.py  nlx.py  oas.py  registry.py  schema.py  zds_client.py
zds_client/tests/: mocks.py
