# setuptools config
# see http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
name = gemma-zds-client
version = 0.4.2
description = Generieke client voor GEMMA-zaken componenten
long_description = file: README.rst
url = https://github.com/VNG-Realisatie/gemma-zds-client
license = EUPL 1.2
author = Maykin Media, VNG-Realisatie
author_email = support@maykinmedia.nl
keywords = openapi, swagger, django, vng, client, requests
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    pyyaml
    requests
tests_require =
    pytest
    tox
    isort

[options.extras_require]
tests =
    pytest
    tox
    isort
pep8 = flake8
coverage = pytest-cov
docs =
    sphinx
    sphinx-rtd-theme
release = zest.releaser

# 3rd party configuration

[aliases]
test=pytest

[bdist_wheel]
universal = 1

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = false
line_length = 79
multi_line_output = 5
skip = env,.tox,.history,.eggs
; skip_glob =
not_skip = __init__.py
known_first_party=zds_client
sections=FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[tool:pytest]
testpaths = tests

[pep8]
max-line-length=79
exclude=env,.tox,doc

[flake8]
max-line-length=79
exclude=env,.tox,doc

[zest.releaser]
create-wheel = yes
