# setuptools config
# see http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
name = gemma-zds-client
version = 0.13.4
description = Generieke client voor GEMMA-zaken componenten
long_description = file: README.rst
url = https://github.com/VNG-Realisatie/gemma-zds-client
license = EUPL 1.2
author = Maykin Media, VNG-Realisatie
author_email = support@maykinmedia.nl
keywords = openapi, swagger, django, vng, client, requests
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    pyjwt
    pyyaml
    requests
tests_require =
    pytest
    tox
    isort
    requests-mock

[options.packages.find]
include =
    zds_client
    zds_client.*

[options.entry_points]
console_scripts =
    generate-jwt = zds_client.generate_jwt:main

[options.extras_require]
nlx =
    nlx-url-rewriter
tests =
    pytest
    tox
    isort
    black
    requests-mock
pep8 = flake8
coverage = pytest-cov
docs =
    sphinx
    sphinx-rtd-theme
release =
    bump2version
    twine

# 3rd party configuration

[aliases]
test=pytest

[bdist_wheel]
universal = 1

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = false
line_length = 79
multi_line_output = 5
skip = env,.tox,.history,.eggs
; skip_glob =
not_skip = __init__.py
known_first_party=zds_client
sections=FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[tool:pytest]
testpaths = tests

[flake8]
max-line-length=119
ignore = E121,E123,E126,E226,E24,E704,W503,W504,E231,F405,E203
exclude=env,.tox,doc
